--- a/src/modules/accounts/views/emails/fogottenPassword.hbs
+++ b/src/modules/accounts/views/emails/fogottenPassword.hbs
@@ -1,8 +1,7 @@
 <html>
 	<head>
 		<style>
-			.container { display: flex; flex-direction: column; align-items: center; width: 800px; font-family: Arial, Helvetica, sans-serif; } span { display: block;
-			margin: 10px 0; }
+			.container { width: 800px; font-family: Arial, Helvetica, sans-serif; } span { margin: 10px 0; display: block; }
 		</style>
 
 	</head>
